--- a/OOPs/ch_12_Stream_API.ipynb
+++ b/OOPs/ch_12_Stream_API.ipynb
@@ -112,13 +112,340 @@
    "metadata": {},
    "source": [
     "# Working with streams to process collections.\n",
-    "\n"
+    "\n",
+    "Working with streams to process collections involves using the Stream API to express operations on data in a more functional and concise manner. Let's go through some common stream operations and examples:\n",
+    "\n",
+    "### Example: Processing a List of Integers\n",
+    "\n",
+    "```java\n",
+    "import java.util.Arrays;\n",
+    "import java.util.List;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "public class StreamProcessingExample {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);\n",
+    "\n",
+    "        // Example 1: Filtering even numbers and collecting to a new list\n",
+    "        List<Integer> evenNumbers = numbers.stream()\n",
+    "                .filter(number -> number % 2 == 0)\n",
+    "                .collect(Collectors.toList());\n",
+    "        System.out.println(\"Even Numbers: \" + evenNumbers);\n",
+    "\n",
+    "        // Example 2: Doubling each number and collecting to a new list\n",
+    "        List<Integer> doubledNumbers = numbers.stream()\n",
+    "                .map(number -> number * 2)\n",
+    "                .collect(Collectors.toList());\n",
+    "        System.out.println(\"Doubled Numbers: \" + doubledNumbers);\n",
+    "\n",
+    "        // Example 3: Calculating the sum of all numbers\n",
+    "        int sum = numbers.stream().reduce(0, Integer::sum);\n",
+    "        System.out.println(\"Sum: \" + sum);\n",
+    "\n",
+    "        // Example 4: Checking if any number is greater than 5\n",
+    "        boolean anyGreaterThanFive = numbers.stream().anyMatch(number -> number > 5);\n",
+    "        System.out.println(\"Any Number Greater Than 5: \" + anyGreaterThanFive);\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example:\n",
+    "\n",
+    "1. **Filtering:** We use the `filter` operation to filter even numbers.\n",
+    "2. **Mapping:** We use the `map` operation to double each number.\n",
+    "3. **Reducing:** We use the `reduce` operation to calculate the sum of all numbers.\n",
+    "4. **Checking:** We use the `anyMatch` operation to check if any number is greater than 5.\n",
+    "\n",
+    "### Example: Processing a List of Strings\n",
+    "\n",
+    "```java\n",
+    "import java.util.Arrays;\n",
+    "import java.util.List;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "public class StringStreamExample {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<String> words = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "\n",
+    "        // Example 1: Filtering words with length greater than 5\n",
+    "        List<String> longWords = words.stream()\n",
+    "                .filter(word -> word.length() > 5)\n",
+    "                .collect(Collectors.toList());\n",
+    "        System.out.println(\"Long Words: \" + longWords);\n",
+    "\n",
+    "        // Example 2: Mapping words to uppercase\n",
+    "        List<String> uppercasedWords = words.stream()\n",
+    "                .map(String::toUpperCase)\n",
+    "                .collect(Collectors.toList());\n",
+    "        System.out.println(\"Uppercased Words: \" + uppercasedWords);\n",
+    "\n",
+    "        // Example 3: Combining words into a single string\n",
+    "        String concatenatedWords = words.stream()\n",
+    "                .reduce(\"\", (result, word) -> result + word);\n",
+    "        System.out.println(\"Concatenated Words: \" + concatenatedWords);\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "In this example:\n",
+    "\n",
+    "1. **Filtering:** We use the `filter` operation to filter words with a length greater than 5.\n",
+    "2. **Mapping:** We use the `map` operation to convert each word to uppercase.\n",
+    "3. **Reducing:** We use the `reduce` operation to concatenate all words into a single string.\n",
+    "\n",
+    "These examples showcase some of the common stream operations available in the Stream API. Stream operations can be combined and pipelined to express complex data transformations in a readable and concise manner. The Stream API is particularly useful when working with large datasets and parallel processing."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Intermediate and terminal operations.\n",
+    "\n",
+    "In the Java Stream API, operations are classified into two main categories: intermediate operations and terminal operations.\n",
+    "\n",
+    "### Intermediate Operations:\n",
+    "\n",
+    "Intermediate operations are operations that transform a stream into another stream. They are lazy, meaning they don't process elements until a terminal operation is invoked. Intermediate operations are often used in a chained manner, forming a pipeline.\n",
+    "\n",
+    "#### 1. **filter(Predicate<T> predicate):**\n",
+    "   - Returns a stream consisting of the elements that match the given predicate.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   List<String> result = fruits.stream()\n",
+    "                             .filter(fruit -> fruit.startsWith(\"a\"))\n",
+    "                             .collect(Collectors.toList());\n",
+    "   ```\n",
+    "\n",
+    "#### 2. **map(Function<T, R> mapper):**\n",
+    "   - Returns a stream consisting of the results of applying the given function to the elements.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   List<Integer> lengths = fruits.stream()\n",
+    "                               .map(String::length)\n",
+    "                               .collect(Collectors.toList());\n",
+    "   ```\n",
+    "\n",
+    "#### 3. **flatMap(Function<T, Stream<R>> mapper):**\n",
+    "   - Returns a stream consisting of the results of replacing each element with the contents of a mapped stream.\n",
+    "\n",
+    "   ```java\n",
+    "   List<List<String>> nestedList = Arrays.asList(\n",
+    "       Arrays.asList(\"apple\", \"banana\"),\n",
+    "       Arrays.asList(\"orange\", \"pear\")\n",
+    "   );\n",
+    "\n",
+    "   List<String> flatList = nestedList.stream()\n",
+    "                                   .flatMap(Collection::stream)\n",
+    "                                   .collect(Collectors.toList());\n",
+    "   ```\n",
+    "\n",
+    "#### 4. **distinct():**\n",
+    "   - Returns a stream consisting of distinct elements (according to their natural order or provided comparator).\n",
+    "\n",
+    "   ```java\n",
+    "   List<Integer> numbers = Arrays.asList(1, 2, 2, 3, 4, 4, 5);\n",
+    "   List<Integer> distinctNumbers = numbers.stream()\n",
+    "                                          .distinct()\n",
+    "                                          .collect(Collectors.toList());\n",
+    "   ```\n",
+    "\n",
+    "### Terminal Operations:\n",
+    "\n",
+    "Terminal operations are operations that produce a result or a side-effect. They trigger the processing of elements in the pipeline.\n",
+    "\n",
+    "#### 1. **forEach(Consumer<T> action):**\n",
+    "   - Performs an action for each element of the stream.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   fruits.stream().forEach(System.out::println);\n",
+    "   ```\n",
+    "\n",
+    "#### 2. **collect(Collector<T, A, R> collector):**\n",
+    "   - Performs a mutable reduction on the elements of the stream using a `Collector`.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   String result = fruits.stream()\n",
+    "                        .collect(Collectors.joining(\", \"));\n",
+    "   ```\n",
+    "\n",
+    "#### 3. **reduce(BinaryOperator<T> accumulator):**\n",
+    "   - Performs a reduction on the elements of the stream using an associative accumulation function.\n",
+    "\n",
+    "   ```java\n",
+    "   List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);\n",
+    "   int sum = numbers.stream()\n",
+    "                    .reduce(0, Integer::sum);\n",
+    "   ```\n",
+    "\n",
+    "#### 4. **count():**\n",
+    "   - Returns the count of elements in the stream.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   long count = fruits.stream().count();\n",
+    "   ```\n",
+    "\n",
+    "#### 5. **anyMatch(Predicate<T> predicate):**\n",
+    "   - Returns whether any elements of the stream match the given predicate.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   boolean anyMatch = fruits.stream()\n",
+    "                            .anyMatch(fruit -> fruit.startsWith(\"a\"));\n",
+    "   ```\n",
+    "\n",
+    "#### 6. **allMatch(Predicate<T> predicate):**\n",
+    "   - Returns whether all elements of the stream match the given predicate.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   boolean allMatch = fruits.stream()\n",
+    "                            .allMatch(fruit -> fruit.length() > 2);\n",
+    "   ```\n",
+    "\n",
+    "#### 7. **noneMatch(Predicate<T> predicate):**\n",
+    "   - Returns whether no elements of the stream match the given predicate.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   boolean noneMatch = fruits.stream()\n",
+    "                             .noneMatch(fruit -> fruit.endsWith(\"x\"));\n",
+    "   ```\n",
+    "\n",
+    "#### 8. **findFirst():**\n",
+    "   - Returns an `Optional` describing the first element of the stream, or an empty `Optional` if the stream is empty.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   Optional<String> first = fruits.stream().findFirst();\n",
+    "   ```\n",
+    "\n",
+    "#### 9. **findAny():**\n",
+    "   - Returns an `Optional` describing any element of the stream, or an empty `Optional` if the stream is empty.\n",
+    "\n",
+    "   ```java\n",
+    "   List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "   Optional<String> any = fruits.stream().findAny();\n",
+    "   ```\n",
+    "\n",
+    "These are some of the common intermediate and terminal operations in the Java Stream API. Understanding how to use these operations helps you write concise and expressive code when working with collections."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collectors and reduction.\n",
+    "\n",
+    "In the Java Stream API, `Collectors` and reduction are used for aggregating the elements of a stream into a single result. Both are terminal operations, and they serve different purposes.\n",
+    "\n",
+    "### Collectors:\n",
+    "\n",
+    "`Collectors` is a utility class that provides a set of static methods for collecting elements of a stream into various data structures or performing reduction operations, such as summing, averaging, grouping, and joining.\n",
+    "\n",
+    "#### Example 1: Collecting to a List\n",
+    "\n",
+    "```java\n",
+    "List<String> fruits = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "List<String> collectedList = fruits.stream()\n",
+    "                                  .filter(fruit -> fruit.length() > 5)\n",
+    "                                  .collect(Collectors.toList());\n",
+    "```\n",
+    "\n",
+    "#### Example 2: Collecting to a Set\n",
+    "\n",
+    "```java\n",
+    "Set<String> collectedSet = fruits.stream()\n",
+    "                                .filter(fruit -> fruit.length() > 5)\n",
+    "                                .collect(Collectors.toSet());\n",
+    "```\n",
+    "\n",
+    "#### Example 3: Joining Elements\n",
+    "\n",
+    "```java\n",
+    "String result = fruits.stream()\n",
+    "                      .collect(Collectors.joining(\", \"));\n",
+    "```\n",
+    "\n",
+    "#### Example 4: Grouping by Length\n",
+    "\n",
+    "```java\n",
+    "Map<Integer, List<String>> groupedByLength = fruits.stream()\n",
+    "                                                  .collect(Collectors.groupingBy(String::length));\n",
+    "```\n",
+    "\n",
+    "#### Example 5: Summing Integers\n",
+    "\n",
+    "```java\n",
+    "List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);\n",
+    "int sum = numbers.stream()\n",
+    "                 .collect(Collectors.summingInt(Integer::intValue));\n",
+    "```\n",
+    "\n",
+    "#### Example 6: Averaging Doubles\n",
+    "\n",
+    "```java\n",
+    "List<Double> doubles = Arrays.asList(1.0, 2.0, 3.0, 4.0, 5.0);\n",
+    "double average = doubles.stream()\n",
+    "                       .collect(Collectors.averagingDouble(Double::doubleValue));\n",
+    "```\n",
+    "\n",
+    "### Reduction:\n",
+    "\n",
+    "Reduction is a terminal operation that combines the elements of a stream into a single result. The `reduce` operation takes a binary operator and an identity element and applies the operator to the elements of the stream in a cumulative manner.\n",
+    "\n",
+    "#### Example 1: Summing Integers\n",
+    "\n",
+    "```java\n",
+    "List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);\n",
+    "int sum = numbers.stream()\n",
+    "                 .reduce(0, Integer::sum);\n",
+    "```\n",
+    "\n",
+    "#### Example 2: Concatenating Strings\n",
+    "\n",
+    "```java\n",
+    "List<String> words = Arrays.asList(\"Hello\", \" \", \"World\", \"!\");\n",
+    "String concatenated = words.stream()\n",
+    "                          .reduce(\"\", String::concat);\n",
+    "```\n",
+    "\n",
+    "#### Example 3: Finding the Maximum\n",
+    "\n",
+    "```java\n",
+    "List<Integer> numbers = Arrays.asList(1, 3, 5, 2, 4);\n",
+    "Optional<Integer> max = numbers.stream()\n",
+    "                              .reduce(Integer::max);\n",
+    "```\n",
+    "\n",
+    "#### Example 4: Custom Reduction Operation\n",
+    "\n",
+    "```java\n",
+    "List<String> words = Arrays.asList(\"apple\", \"banana\", \"orange\", \"pear\");\n",
+    "String concatenated = words.stream()\n",
+    "                          .reduce(\"\", (partialResult, word) -> partialResult + word + \", \", String::concat);\n",
+    "```\n",
+    "\n",
+    "### When to Use Collectors vs. Reduction:\n",
+    "\n",
+    "- **Use Collectors when:** You want to collect elements into specific data structures, perform grouping, joining, or other specialized operations.\n",
+    "\n",
+    "- **Use Reduction when:** You want to aggregate elements into a single result, especially when dealing with numerical calculations or custom aggregation logic.\n",
+    "\n",
+    "Both `Collectors` and reduction operations provide powerful tools for working with streams, and the choice depends on the specific task at hand. Collectors are often more convenient for common use cases, while reduction offers flexibility for custom aggregation operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Thank You!**"
+   ]
   }
  ],
  "metadata": {
