--- a/Stack & Queues/ Implement_Stack_from_Scratch.ipynb
+++ b/Stack & Queues/ Implement_Stack_from_Scratch.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -115,16 +115,171 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Peek: 60\n",
-      "Pop: 60\n",
-      "Peek: 50\n"
+      "Peek: 50\n",
+      "Pop: 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is stack empty? false\n",
+      "Is stack full? false\n",
+      "Peek: 90\n",
+      "Pop: 90\n",
+      "Is stack empty? false\n",
+      "Is stack full? false\n"
      ]
     }
    ],
    "source": [
     "System.out.println(\"Peek: \" + stack.peek());\n",
     "System.out.println(\"Pop: \" + stack.pop());\n",
-    "System.out.println(\"Peek: \" + stack.peek());"
+    "\n",
+    "System.out.println(\"Is stack empty? \" + stack.isEmpty());\n",
+    "System.out.println(\"Is stack full? \" + stack.isFull());\n",
+    "\n",
+    "stack.push(70);\n",
+    "stack.push(80);\n",
+    "stack.push(90);\n",
+    "\n",
+    "System.out.println(\"Peek: \" + stack.peek());\n",
+    "System.out.println(\"Pop: \" + stack.pop());\n",
+    "\n",
+    "System.out.println(\"Is stack empty? \" + stack.isEmpty());\n",
+    "System.out.println(\"Is stack full? \" + stack.isFull());\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " here's an example of a simple stack implementation in Java, including the main operations: push, pop, peek, isEmpty, and isFull.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Stack {\n",
+    "    private int maxSize;\n",
+    "    private int top;\n",
+    "    private int[] stackArray;\n",
+    "\n",
+    "    public Stack(int size) {\n",
+    "        maxSize = size;\n",
+    "        stackArray = new int[maxSize];\n",
+    "        top = -1;\n",
+    "    }\n",
+    "\n",
+    "    public void push(int value) {\n",
+    "        if (top < maxSize - 1) {\n",
+    "            stackArray[++top] = value;\n",
+    "            System.out.println(\"Pushed \" + value + \" to the stack\");\n",
+    "        } else {\n",
+    "            System.out.println(\"Stack is full. Can't push \" + value);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public int pop() {\n",
+    "        if (top >= 0) {\n",
+    "            System.out.println(\"Popped \" + stackArray[top] + \" from the stack\");\n",
+    "            return stackArray[top--];\n",
+    "        } else {\n",
+    "            System.out.println(\"Stack is empty. Can't pop\");\n",
+    "            return -1;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public int peek() {\n",
+    "        if (top >= 0) {\n",
+    "            System.out.println(\"Peek: \" + stackArray[top]);\n",
+    "            return stackArray[top];\n",
+    "        } else {\n",
+    "            System.out.println(\"Stack is empty. Can't peek\");\n",
+    "            return -1;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public boolean isEmpty() {\n",
+    "        return (top == -1);\n",
+    "    }\n",
+    "\n",
+    "    public boolean isFull() {\n",
+    "        return (top == maxSize - 1);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Stack stack = new Stack(3);\n",
+    "\n",
+    "        stack.push(10);\n",
+    "        stack.push(20);\n",
+    "        stack.push(30);\n",
+    "\n",
+    "        stack.peek();\n",
+    "\n",
+    "        stack.pop();\n",
+    "\n",
+    "        System.out.println(\"Is stack empty? \" + stack.isEmpty());\n",
+    "        System.out.println(\"Is stack full? \" + stack.isFull());\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stacks are used in a variety of applications in programming, including:\n",
+    "\n",
+    "1. **Function Call Stack**: Stacks are used to manage function calls and returns. When a function is called, its details (like return address, local variables) are pushed onto a stack. When the function returns, these details are popped from the stack.\n",
+    "\n",
+    "2. **Expression Evaluation and Syntax Parsing**: Stacks are used in compilers for syntax checking of expressions and their evaluation. They help in checking the proper opening and closing of brackets, parsing postfix expressions, etc.\n",
+    "\n",
+    "3. **Backtracking**: Stacks are used to solve problems where you need to perform actions and then undo them, such as in depth-first search, finding paths in a maze, the \"undo\" feature in text editors, and backtracking in algorithms.\n",
+    "\n",
+    "4. **Memory Management**: Stacks are used in managing memory in modern operating systems. Each thread has a stack associated with it.\n",
+    "\n",
+    "5. **Browser History**: Web browsers use stacks to manage the history of visited web pages. The \"back\" button pops the top page from the stack.\n",
+    "\n",
+    "These are just a few examples. Stacks are a fundamental data structure and are used in many more scenarios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "This code creates a stack of size 3, pushes three integers onto it, peeks at the top element, pops an element, and checks if the stack is empty or full."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sure, here's a brief explanation of the stack operations:\n",
+    "\n",
+    "1. `push`: This operation adds an element to the top of the stack. In the provided code, `stack.push(70);` is pushing the integer 70 onto the top of the stack.\n",
+    "\n",
+    "2. `pop`: This operation removes the top element from the stack and returns it. In the code, `stack.pop();` is removing the top element from the stack.\n",
+    "\n",
+    "3. `peek` or `top`: This operation returns the top element of the stack without removing it. In the code, `stack.peek();` is returning the top element of the stack.\n",
+    "\n",
+    "4. `isEmpty`: This operation checks if the stack is empty. If the stack is empty, it returns true; otherwise, it returns false. In the code, `stack.isEmpty();` is checking if the stack is empty.\n",
+    "\n",
+    "5. `isFull`: This operation checks if the stack is full. If the stack is full, it returns true; otherwise, it returns false. In the code, `stack.isFull();` is checking if the stack is full.\n",
+    "\n",
+    "These are the basic operations that can be performed on a stack. They allow us to add, remove, and inspect elements in a Last-In-First-Out (LIFO) manner."
    ]
   }
  ],
