--- a/Stack & Queues/ Implement_Stack_from_Scratch.ipynb
+++ b/Stack & Queues/ Implement_Stack_from_Scratch.ipynb
@@ -29,6 +29,244 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What are the Way to implements Stack?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are several ways to implement a stack in programming:\n",
+    "\n",
+    "1. **Array-Based Implementation**: This is a simple and direct method where an array is used to store the stack elements. The index of the array can act as the stack pointer. However, the size of the stack is fixed in this case and needs to be defined at the start.\n",
+    "\n",
+    "2. **Linked List Implementation**: In this method, a linked list is used to implement a stack. The head of the list can act as the top of the stack. This method allows for a dynamic size of the stack.\n",
+    "\n",
+    "3. **Standard Library**: Most programming languages have built-in data types or classes for stack implementation. For example, in Java, you can use the Stack class; in Python, you can use a list as a stack with append() for push operation and pop() for pop operation.\n",
+    "\n",
+    "4. **Using Queues**: A stack can also be implemented using two queues. The push operation is done by enqueue operation and the pop operation is done by making the dequeue operation costly.\n",
+    "\n",
+    "5. **Wrapper Class**: You can also create a wrapper class around any of the above implementations, providing methods like push(), pop(), peek(), isEmpty(), and isFull().\n",
+    "\n",
+    "Remember, the choice of implementation depends on the specific requirements and constraints of your program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stack Implementation Using Array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sure, here's a simple implementation of a stack using an array in Java:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Stack {\n",
+    "    private int maxSize;\n",
+    "    private int top;\n",
+    "    private int[] stackArray;\n",
+    "\n",
+    "    public Stack(int size) {\n",
+    "        maxSize = size;\n",
+    "        stackArray = new int[maxSize];\n",
+    "        top = -1;\n",
+    "    }\n",
+    "\n",
+    "    public void push(int value) {\n",
+    "        if (!isFull()) {\n",
+    "            stackArray[++top] = value;\n",
+    "        } else {\n",
+    "            System.out.println(\"The stack is full, can't insert value \" + value);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void pop() {\n",
+    "        if (!isEmpty()) {\n",
+    "            top--;\n",
+    "        } else {\n",
+    "            System.out.println(\"The stack is empty, can't pop a value\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public int peek() {\n",
+    "        if (!isEmpty()) {\n",
+    "            return stackArray[top];\n",
+    "        } else {\n",
+    "            System.out.println(\"The stack is empty, can't peek\");\n",
+    "            return -1;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public boolean isEmpty() {\n",
+    "        return (top == -1);\n",
+    "    }\n",
+    "\n",
+    "    public boolean isFull() {\n",
+    "        return (top == maxSize - 1);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "In this code:\n",
+    "\n",
+    "- The `push` method inserts a value at the top of the stack.\n",
+    "- The `pop` method removes the value at the top of the stack.\n",
+    "- The `peek` method returns the value at the top of the stack without removing it.\n",
+    "- The `isEmpty` method checks if the stack is empty.\n",
+    "- The `isFull` method checks if the stack is full."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stack Implementation Using ArrayList"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's an implementation of a stack using an ArrayList in Java:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class Stack {\n",
+    "    private ArrayList<Integer> stackList;\n",
+    "\n",
+    "    public Stack() {\n",
+    "        stackList = new ArrayList<Integer>();\n",
+    "    }\n",
+    "\n",
+    "    public void push(int value) {\n",
+    "        stackList.add(value);\n",
+    "    }\n",
+    "\n",
+    "    public int pop() {\n",
+    "        if (!isEmpty()) {\n",
+    "            return stackList.remove(stackList.size() - 1);\n",
+    "        } else {\n",
+    "            System.out.println(\"The stack is empty\");\n",
+    "            return -1;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public boolean isEmpty() {\n",
+    "        return stackList.isEmpty();\n",
+    "    }\n",
+    "\n",
+    "    public int size() {\n",
+    "        return stackList.size();\n",
+    "    }\n",
+    "\n",
+    "    public int peek() {\n",
+    "        if (!isEmpty()) {\n",
+    "            return stackList.get(stackList.size() - 1);\n",
+    "        } else {\n",
+    "            System.out.println(\"The stack is empty\");\n",
+    "            return -1;\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main \n",
+    "{\n",
+    "    public static void main(String[] args) {\n",
+    "        Stack stack = new Stack();\n",
+    "\n",
+    "        stack.push(10);\n",
+    "        stack.push(20);\n",
+    "        stack.push(30);\n",
+    "\n",
+    "        System.out.println(\"Size of stack: \" + stack.size());\n",
+    "\n",
+    "        System.out.println(\"Top element: \" + stack.peek());\n",
+    "\n",
+    "        System.out.println(\"Pop element: \" + stack.pop());\n",
+    "\n",
+    "        System.out.println(\"Size of stack after pop: \" + stack.size());\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "This code will output:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Size of stack: 3\n",
+    "Top element: 30\n",
+    "Pop element: 30\n",
+    "Size of stack after pop: 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "In this code:\n",
+    "\n",
+    "- The `push` method adds a value to the end of the ArrayList.\n",
+    "- The `pop` method removes the last value from the ArrayList.\n",
+    "- The `peek` method returns the last value in the ArrayList without removing it.\n",
+    "- The `isEmpty` method checks if the ArrayList is empty.\n",
+    "- The `size` method returns the number of elements in the ArrayList."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -267,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sure, here's a brief explanation of the stack operations:\n",
+    "Here's a brief explanation of the stack operations:\n",
     "\n",
     "1. `push`: This operation adds an element to the top of the stack. In the provided code, `stack.push(70);` is pushing the integer 70 onto the top of the stack.\n",
     "\n",
