--- a/Stack & Queues/ Implement_Stack_from_Scratch.ipynb
+++ b/Stack & Queues/ Implement_Stack_from_Scratch.ipynb
@@ -267,6 +267,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using LinkedList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Java Code for Linked List Implementation \n",
+    "\n",
+    "public class StackAsLinkedList { \n",
+    "\n",
+    "\tStackNode root; \n",
+    "\n",
+    "\tstatic class StackNode { \n",
+    "\t\tint data; \n",
+    "\t\tStackNode next; \n",
+    "\n",
+    "\t\tStackNode(int data) { this.data = data; } \n",
+    "\t} \n",
+    "\n",
+    "\tpublic boolean isEmpty() \n",
+    "\t{ \n",
+    "\t\tif (root == null) { \n",
+    "\t\t\treturn true; \n",
+    "\t\t} \n",
+    "\t\telse\n",
+    "\t\t\treturn false; \n",
+    "\t} \n",
+    "\n",
+    "\tpublic void push(int data) \n",
+    "\t{ \n",
+    "\t\tStackNode newNode = new StackNode(data); \n",
+    "\n",
+    "\t\tif (root == null) { \n",
+    "\t\t\troot = newNode; \n",
+    "\t\t} \n",
+    "\t\telse { \n",
+    "\t\t\tStackNode temp = root; \n",
+    "\t\t\troot = newNode; \n",
+    "\t\t\tnewNode.next = temp; \n",
+    "\t\t} \n",
+    "\t\tSystem.out.println(data + \" pushed to stack\"); \n",
+    "\t} \n",
+    "\n",
+    "\tpublic int pop() \n",
+    "\t{ \n",
+    "\t\tint popped = Integer.MIN_VALUE; \n",
+    "\t\tif (root == null) { \n",
+    "\t\t\tSystem.out.println(\"Stack is Empty\"); \n",
+    "\t\t} \n",
+    "\t\telse { \n",
+    "\t\t\tpopped = root.data; \n",
+    "\t\t\troot = root.next; \n",
+    "\t\t} \n",
+    "\t\treturn popped; \n",
+    "\t} \n",
+    "\n",
+    "\tpublic int peek() \n",
+    "\t{ \n",
+    "\t\tif (root == null) { \n",
+    "\t\t\tSystem.out.println(\"Stack is empty\"); \n",
+    "\t\t\treturn Integer.MIN_VALUE; \n",
+    "\t\t} \n",
+    "\t\telse { \n",
+    "\t\t\treturn root.data; \n",
+    "\t\t} \n",
+    "\t} \n",
+    "\n",
+    "\t// Driver code \n",
+    "\tpublic static void main(String[] args) \n",
+    "\t{ \n",
+    "\n",
+    "\t\tStackAsLinkedList sll = new StackAsLinkedList(); \n",
+    "\n",
+    "\t\tsll.push(10); \n",
+    "\t\tsll.push(20); \n",
+    "\t\tsll.push(30); \n",
+    "\n",
+    "\t\tSystem.out.println(sll.pop() \n",
+    "\t\t\t\t\t\t+ \" popped from stack\"); \n",
+    "\n",
+    "\t\tSystem.out.println(\"Top element is \" + sll.peek()); \n",
+    "\t} \n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -518,6 +614,173 @@
     "5. `isFull`: This operation checks if the stack is full. If the stack is full, it returns true; otherwise, it returns false. In the code, `stack.isFull();` is checking if the stack is full.\n",
     "\n",
     "These are the basic operations that can be performed on a stack. They allow us to add, remove, and inspect elements in a Last-In-First-Out (LIFO) manner."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stack Using Java Collection FrameWork"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Java, the `java.util.Stack` class is part of the Java Collection Framework and extends the `Vector` class. It provides the basic push, pop, and peek operations, as well as several methods for searching for elements in the stack.\n",
+    "\n",
+    "Here's an example of how to use it:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        \u001b[0m\u001b[1m\u001b[30m\u001b[41mStack<Integer>\u001b[0m\u001b[1m\u001b[30m stack = new Stack<>();\u001b[0m",
+      "\u001b[1m\u001b[31mtype Stack does not take parameters\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        Stack<Integer> stack = new \u001b[0m\u001b[1m\u001b[30m\u001b[41mStack<>\u001b[0m\u001b[1m\u001b[30m();\u001b[0m",
+      "\u001b[1m\u001b[31mcannot infer type arguments for Stack\u001b[0m",
+      "\u001b[1m\u001b[31m  reason: cannot use '<>' with non-generic class Stack\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "public class Stack {\n",
+    "    public static void main(String[] args) {\n",
+    "        Stack<Integer> stack = new Stack<>();\n",
+    "\n",
+    "        stack.push(10);\n",
+    "        stack.push(20);\n",
+    "        stack.push(30);\n",
+    "\n",
+    "        System.out.println(\"Current stack: \" + stack);\n",
+    "\n",
+    "        int poppedElement = stack.pop();\n",
+    "        System.out.println(\"Popped element: \" + poppedElement);\n",
+    "\n",
+    "        int topElement = stack.peek();\n",
+    "        System.out.println(\"Top element: \" + topElement);\n",
+    "\n",
+    "        System.out.println(\"Final stack: \" + stack);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems like there's a naming conflict in your code. You have a class named `Stack` and you're also trying to use `java.util.Stack`. \n",
+    "\n",
+    "The `Stack` in `Stack<Integer> stack = new Stack<>();` is referring to your own class `Stack`, not `java.util.Stack`. \n",
+    "\n",
+    "To fix this, you can either rename your class to something else, or you can use the fully qualified class name for `java.util.Stack` when declaring your stack. Here's how you can do it:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.Stack;\n",
+    "\n",
+    "public class MyStack {\n",
+    "    public static void main(String[] args) {\n",
+    "        java.util.Stack<Integer> stack = new java.util.Stack<>();\n",
+    "\n",
+    "        stack.push(10);\n",
+    "        stack.push(20);\n",
+    "        stack.push(30);\n",
+    "\n",
+    "        System.out.println(\"Current stack: \" + stack);\n",
+    "\n",
+    "        int poppedElement = stack.pop();\n",
+    "        System.out.println(\"Popped element: \" + poppedElement);\n",
+    "\n",
+    "        int topElement = stack.peek();\n",
+    "        System.out.println(\"Top element: \" + topElement);\n",
+    "\n",
+    "        System.out.println(\"Final stack: \" + stack);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "MyStack stack = new MyStack();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "In this code, I've renamed your class to `MyStack` to avoid the naming conflict."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "This code will output:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Current stack: [10, 20, 30]\n",
+    "Popped element: 30\n",
+    "Top element: 20\n",
+    "Final stack: [10, 20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "In this code:\n",
+    "\n",
+    "- The `push` method adds an element to the top of the stack.\n",
+    "- The `pop` method removes the top element from the stack and returns it.\n",
+    "- The `peek` method returns the top element from the stack without removing it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Thank You!**"
    ]
   }
  ],
